# Little-Type-Library

./: .clang-format  .gitignore  CMakeLists.txt  Functional.md  LICENSE.txt  README.md  Tuple.md  Type.md  coverage.json  coverage.xml  main.cpp  test.cpp
.github/scripts/: build.sh  doc.sh
.github/workflows/: ci.yml  doc.yml
Docker/: build_ltl.sh  docker_clang  docker_gcc_7  docker_gcc_latest
Tests/: CMakeLists.txt  test.cpp  test_compile_time.cpp
benchmarks/: CMakeLists.txt  benchmarks.cpp
cmake/: LittleTypeLibraryConfig.cmake  LittleTypeLibraryConfig.cmake.in
doc/: CMakeLists.txt  Doxyfile.in
docs/coverage/: index.html  index.src_ltl_Range_AsPointer.h.html  index.src_ltl_Range_BaseIterator.h.html  index.src_ltl_Range_DefaultView.h.html  index.src_ltl_Range_Filter.h.html  index.src_ltl_Range_Join.h.html  index.src_ltl_Range_Map.h.html  index.src_ltl_Range_NullableFunction.h.html  index.src_ltl_Range_Range.h.html  index.src_ltl_Range_Repeater.h.html  index.src_ltl_Range_Reverse.h.html  index.src_ltl_Range_Split.h.html  index.src_ltl_Range_Taker.h.html  index.src_ltl_Range_Value.h.html  index.src_ltl_Range_Zip.h.html  index.src_ltl_Range_actions.h.html  index.src_ltl_Range_enumerate.h.html  index.src_ltl_Range_seq.h.html  index.src_ltl_StrongType.h.html  index.src_ltl_Tuple.h.html  index.src_ltl_TypedTuple.h.html  index.src_ltl_VariantUtils.h.html  index.src_ltl_algos.h.html  index.src_ltl_condition.h.html  index.src_ltl_coroutine_helpers.h.html  index.src_ltl_crtp.h.html  index.src_ltl_expected.h.html  index.src_ltl_functional.h.html  index.src_ltl_immutable.h.html  index.src_ltl_invoke.h.html  index.src_ltl_ltl.h.html  index.src_ltl_operator.h.html  index.src_ltl_optional.h.html  index.src_ltl_stream.h.html  index.src_ltl_thread.h.html  index.src_ltl_tuple_algos.h.html
docs/documentation/: AsPointer_8h.html  AsPointer_8h__dep__incl.map  AsPointer_8h__dep__incl.md5  AsPointer_8h__incl.map  AsPointer_8h__incl.md5  AsPointer_8h_source.html  BaseIterator_8h.html  BaseIterator_8h.js  BaseIterator_8h__dep__incl.map  BaseIterator_8h__dep__incl.md5  BaseIterator_8h__incl.map  BaseIterator_8h__incl.md5  BaseIterator_8h_source.html  DefaultView_8h.html  DefaultView_8h.js  DefaultView_8h__incl.map  DefaultView_8h__incl.md5  DefaultView_8h_source.html  Filter_8h.html  Filter_8h.js  Filter_8h__dep__incl.map  Filter_8h__dep__incl.md5  Filter_8h__incl.map  Filter_8h__incl.md5  Filter_8h_source.html  Join_8h.html  Join_8h.js  Join_8h__dep__incl.map  Join_8h__dep__incl.md5  Join_8h__incl.map  Join_8h__incl.md5  Join_8h_source.html  Map_8h.html  Map_8h.js  Map_8h__dep__incl.map  Map_8h__dep__incl.md5  Map_8h__incl.map  Map_8h__incl.md5  Map_8h_source.html  NullableFunction_8h.html  (+831 more)
docs/documentation/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+70 more)
documentation/: Functional.md  Other.md  Traits.md  Tuple.md  Type.md  algorithms.md
include/ltl/: StrongType.h  Tuple.h  TypedTuple.h  VariantUtils.h  algos.h  concept.h  condition.h  crtp.h  expected.h  functional.h  immutable.h  invoke.h  ltl.h  movable_any.h  operator.h  optional_type.h  stream.h  traits.h  tuple_algos.h
include/ltl/Range/: AsPointer.h  BaseIterator.h  DefaultView.h  Filter.h  GroupBy.h  Join.h  Map.h  NullableFunction.h  Range.h  Repeater.h  Reverse.h  Split.h  Taker.h  Value.h  Zip.h  actions.h  enumerate.h
lpl/: and.h  cat.h  checker.h  compl.h  dec_inc.h  evaluation.h  if.h  lpl.h  stringify.h
ltl/: DefaultView.h  StrongType.h  Tuple.h  TypedTuple.h  VariantUtils.h  algos.h  bool_t.h  concept.h  condition.h  crtp.h  decay_reference_wrapper.h  functional.h  invoke.h  is_valid.h  ltl.h  movable_any.h  number_t.h  operator.h  optional_type.h  overloader.h  range.h  smart_iterator.h  stream.h  strong_type.h  trait.h  traits.h  tuple.h  tuple_algos.h  type_t.h  type_trait.h  type_traits.h
ltl/Range/: BaseIterator.h  DefaultView.h  Filter.h  GroupBy.h  Join.h  Map.h  NullableFunction.h  Range.h  Taker.h  Value.h  Zip.h  aspointer.h  enumerate.h  range.h
ltl/strong_type/: arithmetic.h  comparator.h  converter.h  equality.h  stream.h  strong_type_t.h
ltl/tuple/: algorithm.h  argument.h  template.h  tuple_t.h
src/: CMakeLists.txt
src/lpl/: CMakeLists.txt  lpl.h
src/ltl/: CMakeLists.txt  StrongType.h  Tuple.h  TypedTuple.h  VariantUtils.h  algos.h  concept.h  condition.h  coroutine_helpers.h  crtp.h  expected.h  fast.h  functional.h  immutable.h  invoke.h  ltl.h  movable_any.h  operator.h  optional.h  optional_type.h  stream.h  thread.h  traits.h  tuple_algos.h
src/ltl/Range/: AsPointer.h  BaseIterator.h  CMakeLists.txt  DefaultView.h  Filter.h  GroupBy.h  Join.h  Map.h  NullableFunction.h  Range.h  Repeater.h  Reverse.h  Split.h  Taker.h  Value.h  Zip.h  actions.h  enumerate.h  seq.h
test/: CMakeLists.txt
test/source/: test.cpp
